instrucciones de uso

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
 <body onload="init()">
     <div>
         <h1 class="p-4 text-center">SIMULADOR DE PEDIDOS PARA RESTAURANTE</h1>
+        <p class="p-4 text-center">Es una simple app para realizar pedidos de Restaurante</p>
+        <p class=" text-center">Intrucciones: Debes ingresar los platillos con el boton "Realizar Orden" con sus respectivos numeros, si deseas cambiar el estado y el platillo se encuentra listo oprime el boton "orden realizada" y pega el numero de orden respectivo. Por ultimo si deseas eliminar algun platillo ya sea porque ingresaste mal el plato o porque simplemente ya no lo necesitas con el boton de "Finalizar Orden" y poniendo el numero de la orden lo puede hacer, Muchas gracias por probar la app, Saludos :)</p>
         <h3 class=" p-3 text-center">Menu</h3>
     </div>
     <div class="container d-flex justify-content-center align-items-center">
